Fixed color of breadcrumbs on mobile

--- a/src/layouts/App.scss
+++ b/src/layouts/App.scss
@@ -480,4 +480,8 @@ body {
     margin: 0 auto;
   }
 
+  .topInfo a, .topInfo a:visited {
+    color: #001c34;
+  }
+
 }
